Bug 782441 part 2: Tweak ua.css to make flex container properties inherit to ::-moz-scrolled-content, so that flex containers with "overflow" set will honor those properties. r=bz
UltraBlame original commit: 472f6793e512f9c585b648801970a3607bbfecb3

--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -140,6 +140,12 @@
   -moz-column-gap: inherit;
   -moz-column-rule: inherit;
   
+  
+  align-items: inherit;
+  flex-direction: inherit;
+  
+  justify-content: inherit;
+  
 
   position: static !important;
   float: none !important;
